# neuronest

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  pyproject.toml
.github/actions/set_variables/: action.yaml  create_env_file.py  pyproject.toml  refactor_caller_workflow_env_file.py
detect-anything/: .dockerignore  install  pyproject.toml
detect-anything/detect_anything/: cli.py  config.py  config.yaml  detect.py  model_handler.py  train.py
detect-anything/detect_anything/modules/: model.py
detect-anything/iac/: main.tf  variables.yaml  variables_shared.tf
functional-object-detection/: pyproject.toml
functional-object-detection/iac/: main.tf  variables.yaml  variables_model_instantiator.tf  variables_object_detection.tf
functional-object-detection/tests/: environment_variables.py
functional-object-detection/tests/integration_tests/: conftest.py  test_endpoint.py
functional-people-counting/: pyproject.toml
functional-people-counting/iac/: main.tf  outputs.tf  variables.yaml  variables_model_instantiator.tf  variables_people_counting.tf  variables_service_evaluator.tf
functional-people-counting/tests/: environment_variables.py
functional-people-counting/tests/integration_tests/: common.py  conftest.py  test_cloud_run.py  test_count_people_async.py  test_count_people_cloud_job.py  test_count_people_cloud_run.py  test_count_people_sync.py  test_evaluate_service.py  test_uninstantiate.py
model-instantiator/: .dockerignore  Dockerfile  install.sh  pyproject.toml
model-instantiator/conf/: config.yaml
model-instantiator/iac/: dynamic_variables.env  main.tf  outputs.tf  static_variables.env  variables.tf  variables.yaml
model-instantiator/model_instantiator/: config.py  environment_variables.py
model-instantiator/model_instantiator/api/: dependencies.py  exceptions.py  instantiate.py  main.py  routes.py  uninstantiate.py
model-instantiator/model_instantiator/jobs/: deploy_model.py  environment_variables.py
object-detection/: Dockerfile  cli.py  cloudbuild.yaml  config.yaml  model_handler.py  pyproject.toml  train.py
object-detection/conf/: config.yaml
object-detection/iac/: dynamic_variables.env  main.tf  static_variables.env  variables.tf  variables.yaml
object-detection/modules/: model.py  schemas.py
object-detection/object_detection/: cli.py  config.py  config.yaml  environment_variables.py  model_handler.py  train.py
object-detection/object_detection/modules/: model.py  schemas.py
object-detection/tests/: test_integration.py
object-detection/tests/integration_tests/: test_endpoint.py
people-counting/: .dockerignore  Dockerfile  install.sh  pyproject.toml
people-counting/api/: config.py  dependencies.py  main.py
people-counting/api/crud/: counter.py
people-counting/api/model/: result.py  video_message.py
people-counting/api/route/: counter.py
people-counting/conf/: config.yaml
people-counting/config/: config.yaml  config_api.yaml
people-counting/iac/: .terraform.lock.hcl  dynamic_variables.env  main.tf  outputs.tf  static_variables.env  terraform.tfstate  terraform.tfstate.backup  tfplan  variables.tf  variables.yaml
people-counting/people_counting/: benchmark.py  centroid_tracker.py  common.py  config.py  dependencies.py  download_dataset.py  environ.py  environment_variables.py  model.py  people_counter.py  run.py  trackable_object.py  video_handler.py  video_renderer.py
people-counting/people_counting/api/: dependencies.py  main.py  people_counter.py  resources.py  routes.py
people-counting/people_counting/jobs/: count_people.py  environment_variables.py  services.py
service-evaluator/: Dockerfile  install.sh  pyproject.toml
service-evaluator/.dvc/: config
service-evaluator/conf/: config.yaml
service-evaluator/datasets/: .gitignore  people_counting_dataset.dvc
service-evaluator/iac/: main.tf  variables.tf  variables.yaml
service-evaluator/service_evaluator/: config.py  dataset_manager.py  environment_variables.py  results_handler.py  results_writer.py
service-evaluator/service_evaluator/api/: dependencies.py  evaluate.py  main.py  resources.py  routes.py
service-evaluator/service_evaluator/jobs/: environment_variables.py  evaluate.py
service-evaluator/service_evaluator/predictor/: base.py  factory.py  people_counting.py
service-evaluator/service_evaluator/scorer/: base.py  factory.py  metrics.py  people_counting.py
shared/: install.sh  pyproject.toml
shared/core/: api_exceptions.py  auth.py  config_overriding.py  exceptions.py  hashing.py  path.py  timing.py  tools.py  utils.py
shared/core/client/: api_client.py  base.py  base_client.py  detect_anything.py  factory.py  model_instantiator.py  object_detection.py  people_counting.py  service_evaluator.py  video_comparator.py
shared/core/google/: cloud_run_job_manager.py  cloud_run_manager.py  firestore_client.py  logging_client.py  storage_client.py  utils.py  vertex_ai_manager.py
shared/core/routes/: base.py  model_instantiator.py  people_counting.py  service_evaluator.py
shared/core/schemas/: asset.py  detect_anything.py  image_name.py  model_instantiator.py  object_detection.py  people_counting.py  service_evaluator.py  vertex_ai.py  video_comparator.py
shared/core/schemas/bigquery/: base.py  (+1 more)
shared/core/serialization/: dataframe.py  encoding.py  image.py  protobuf.py  schema.py
shared/core/services/: asset_reader.py  audio_reader.py  bigquery_writer.py  deployment_status_manager.py  reader_common.py  training_metrics_writer.py
shared/tests/test_schemas/: test_image_name.py
shared/tests/test_serialization/: test_array.py  test_image.py
video-comparator/: config.yaml  pyproject.toml
video-comparator/iac/: main.tf  variables.yaml
video-comparator/scripts/: compare_pair_of_videos.py
video-comparator/video_comparator/: calculate_similarity.py  cli.py  config.py  config.yaml  evaluation.py  generators.py  model_handler.py  requirements.txt  train.py  utils.py
video-comparator/video_comparator/model/: layers.py  losses.py  similarities.py  visil.py
video-comparator/video_comparator/modules/: model.py
(+183 files in other folders)
