[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0","pip>=20.0.0"]

[tool.isort]
known_first_party = ["segment_everything", "tests"]
profile = "black"

[tool.poetry]
authors = ["Côme Arvis <come.arvis@neuronest.net>", "Guillaume Ligner <guillaume.ligner@neuronest.net>"]
description = "segment_everything"
name = "segment_everything"
version = "0.1.0"   

[tool.poetry.dependencies]
addict = "^2.4.0"
core = {path="../shared", develop = true}
groundingdino = { git = "https://github.com/neuronest/Grounded-Segment-Anything.git", subdirectory = "GroundingDINO", rev = "86dc4fd5e2bded355b966f75ec81fdc31755ba3e"}
pycocotools = "^2.0.7"
python = ">3.8.1,<3.9"
shapely = "1.8.5.post1"
supervision = "^0.17.1"
timm = "^0.9.12"
torch = "^2.0.1"
torch-model-archiver = "^0.6.0" # common dependency of online prediction models, to be refactored to be shared
torch-workflow-archiver = "^0.2.4" # common dependency of online prediction models, to be refactored to be shared
torchaudio = "^2.0.2"
torchserve = "^0.6.0" # common dependency of online prediction models, to be refactored to be shared
torchvision = "^0.15.2"
transformers = "^4.35.2"
yapf = "^0.40.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
core = { path="../shared", develop = true, extras = ["dev"] }
