[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0","pip>=20.0.0"]

[tool.isort]
profile = "black"

[tool.poetry]
authors = ["Côme Arvis <come.arvis@neuronest.net>", "Guillaume Ligner <guillaume.ligner@neuronest.net>"]
description = "Functional object detection project"
name = "object-detection-functional"
version = "0.1.0"

[tool.poetry.dependencies]
core = {path="../shared", develop = true}
python = ">3.8.1,<3.11"

[tool.poetry.group.dev.dependencies]
core = { path="../shared", develop = true, extras = ["dev"] }
