[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0","pip>=20.0.0"]

[tool.isort]
known_first_party = ["model_instantiator"]
profile = "black"

[tool.poetry]
authors = ["Côme Arvis <come.arvis@neuronest.net>", "Guillaume Ligner <guillaume.ligner@neuronest.net>"]
description = "Model instantiator"
name = "model-instantiator"
version = "0.1.0"

[tool.poetry.dependencies]
core = {path="../shared", develop = true}
gunicorn = "^20.1.0"
python = ">3.8.1,<3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
python-json-logger = "^2.0.4"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
black = "^22.10.0"
flake8 = "^6.0.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"
pylint = "^2.15.7"
pytest = "^7.1.3"
pytest-xdist = "^2.5.0"
toml-sort = "^0.20.1"
