[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0","pip>=20.0.0"]

[tool.isort]
known_first_party = ["object_detection", "tests"]
profile = "black"

[tool.poetry]
authors = ["Côme Arvis <come.arvis@neuronest.net>", "Guillaume Ligner <guillaume.ligner@neuronest.net>"]
description = "Object detection"
name = "object-detection"
version = "0.1.0"

[tool.poetry.dependencies]
PyYAML = "^6.0"  # implicit torchhub ultralytics dependency
core = {path="../shared", develop = true}
imutils = "^0.5.4"
ipython = "^8.5.0"  # implicit torchhub ultralytics dependency
nvgpu = "^0.9.0"  # torchserve dependency
python = ">3.8.1,<3.10"
scipy = "^1.9.3"  # implicit torchhub ultralytics dependency
seaborn = "^0.12.1"  # implicit torchhub ultralytics dependency
torch = "^1.12.1"
torch-model-archiver = "^0.6.0"
torch-workflow-archiver = "^0.2.4"
torchserve = "^0.6.0"
torchvision = "^0.13.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
core = { path="../shared", develop = true, extras = ["dev"] }
