[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0","pip>=20.0.0"]

[tool.isort]
known_first_party = ["people_counting"]
profile = "black"

[tool.poetry]
authors = ["Côme Arvis <come.arvis@neuronest.net>", "Guillaume Ligner <guillaume.ligner@neuronest.net>"]
description = "People counting project"
name = "people-counting"
version = "0.1.0"

[tool.poetry.dependencies]
cmake = "^3.24.1.1"
core = {path="../core", develop = true}
dlib = "^19.24.0"
fastapi = "^0.85.0"
gdown = "^4.5.1"
imutils = "^0.5.4"
matplotlib = "^3.6.0"
numpy = "^1.23.3"
omegaconf = "^2.2.3"
python = ">3.8.1,<3.10"
scipy = "^1.9.1"
torch = "^1.12.1"
torchvision = "^0.13.1"
uvicorn = "0.18.3"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
black = "^22.10.0"
flake8 = "^6.0.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"
pylint = "^2.15.7"
pytest = "^7.1.3"
pytest-xdist = "^2.5.0"
toml-sort = "^0.20.1"
