[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0","pip>=20.0.0"]

[tool.poetry]
authors = ["Côme Arvis <come.arvis@neuronest.net>", "Guillaume Ligner <guillaume.ligner@neuronest.net>"]
description = "People counting project"
name = "people-counting"
version = "0.1.0"

[tool.poetry.dependencies]
cmake = "^3.24.1.1"
core = {path="../shared", develop = true}
dlib = "^19.24.0"
fastapi = "^0.85.0"
gdown = "^4.5.1"
google-cloud-firestore = "^2.7.0"
google-cloud-storage = "2.5.0"
imutils = "^0.5.4"
ipython = "^8.6.0"
ipython-genutils = "^0.2.0"
matplotlib = "^3.6.0"
numpy = "^1.23.3" 
omegaconf = "^2.2.3"
opencv-contrib-python = "^4.5.5.64"
opencv-python = "^4.5.5.64"
opencv-python-headless = "^4.5.5.64"
pandas = "^1.4.4"
pre-commit = "^3.0.2"
psutil = "^5.9.4"
python = ">3.8.1,<3.10"
scipy = "^1.9.1"
seaborn = "^0.12.0"
torch = "^1.9.0"
torchvision = "^0.10.0"
uvicorn = "0.18.3"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pre-commit = "^3.0.2"
pylint = "^2.15.2"
pytest = "^7.1.3"
pytest-xdist = "^2.5.0"
toml-sort = "^0.20.1"
