[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0","pip>=20.0.0"]

[tool.isort]
known_first_party = ["people_counting"]
profile = "black"

[tool.poetry]
authors = ["Côme Arvis <come.arvis@neuronest.net>", "Guillaume Ligner <guillaume.ligner@neuronest.net>"]
description = "People counting project"
name = "people-counting"
version = "0.1.0"

[tool.poetry.dependencies]
cmake = "^3.24.1.1"
core = {path="../shared", develop = true}
dlib = "^19.24.0"
fastapi = "^0.85.0"
gunicorn = "^20.1.0"
psutil = "^5.9.4"
python = ">3.8.1,<3.10"
scipy = "^1.9.1"
uvicorn = "0.20.0"

[tool.poetry.group.dev.dependencies]
core = { path="../shared", develop = true, extras = ["dev"] }
ipython = "^8.6.0"
ipython-genutils = "^0.2.0"
matplotlib = "^3.6.0"
seaborn = "^0.12.0"
