[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0","pip>=20.0.0"]

[tool.isort]
known_first_party = ["service_evaluator"]
profile = "black"

[tool.poetry]
authors = ["Côme Arvis <come.arvis@neuronest.net>", "Guillaume Ligner <guillaume.ligner@neuronest.net>"]
description = "Service evaluator"
name = "service_evaluator"
version = "0.1.0"

[tool.poetry.dependencies]
core = { path="../shared", develop = true }
dvc = "^3.26.2"
dvc-gs = "^2.22.1"
fastapi = "^0.88.0"
gunicorn = "^20.1.0"
python = ">3.8.1,<3.10"
python-json-logger = "^2.0.4"
uvicorn = "^0.20.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
core = { path="../shared", develop = true, extras = ["dev"] }
