[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["setuptools", "poetry-core>=1.0.0"]

[tool.isort]
known_local_folder = ["core"]
profile = "black"

[tool.poetry]
authors = ["Côme Arvis <come.arvis@neuronest.net>", "Guillaume Ligner <guillaume.ligner@neuronest.net>"]
description = "Core dependencies"
name = "core"
packages = [{ include = "core"}]
version = "0.1.0"

[tool.poetry.dependencies]
black = { version = "^22.10.0", optional = true }
ffmpeg-python = "^0.2.0"
flake8 = { version = "^6.0.0", optional = true }
google-cloud-aiplatform = "^1.18.2"
google-cloud-bigquery = "^2.34.4"
google-cloud-logging = "^3.4.0"
google-cloud-storage = "^2.5.0"
isort = { version = "^5.10.1", optional = true }
librosa = "^0.9.2"
moviepy = "^1.0.3"
numpy = "^1.23.3"
omegaconf = "2.2.3"
opencv-contrib-python-headless = "4.7.0.68"
pandas = "^1.5.0"
pre-commit = { version = "^2.20.0", optional = true }
pydantic = "^1.10.2"
pylint = { version = "^2.15.7", optional = true }
pytest = { version = "^7.1.3", optional = true }
pytest-xdist = { version = "^2.5.0", optional = true }
python = ">3.8.1,<3.11"
toml-sort = { version = "^0.20.1", optional = true }
tqdm = "^4.64.1"

[tool.poetry.extras]
dev = ["black", "flake8", "isort", "pre-commit", "pylint", "pytest", "pytest-xdist", "toml-sort"]
