[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["setuptools", "poetry-core>=1.0.0"]

[tool.isort]
known_first_party = ["core"]
profile = "black"

[tool.poetry]
authors = ["Côme Arvis <come.arvis@neuronest.net>", "Guillaume Ligner <guillaume.ligner@neuronest.net>"]
description = "Core dependencies"
name = "core"
packages = [{ include = "core"}]
version = "0.1.0"

[tool.poetry.dependencies]
backoff = "2.2.1"
black = { version = "22.12.0", optional = true }
ffmpeg-python = "0.2.0"
flake8 = { version = "6.0.0", optional = true }
google-cloud-aiplatform = "1.22.1"
google-cloud-bigquery = "2.34.4"
google-cloud-bigquery-storage = "2.24.0"
google-cloud-firestore = "2.10.0"
google-cloud-logging = "3.5.0"
google-cloud-run = "0.7.0"
google-cloud-storage = "2.7.0"
imutils = "0.5.4"
isort = { version = "5.12.0", optional = true }
librosa = "0.9.2"
moviepy = "1.0.3"
numpy = "1.24.2"
omegaconf = "2.2.3"
opencv-contrib-python-headless = "4.7.0.68"
pandas = "1.5.3"
pre-commit = { version = "2.21.0", optional = true }
pydantic = "1.10.6"
pylint = { version = "2.17.0", optional = true }
pytest = { version = "7.2.2", optional = true }
pytest-xdist = {version = "^2.5.0", optional = true}
python = ">3.8.1,<3.11"
toml-sort = { version = "0.20.2", optional = true }
tqdm = "4.65.0"

[tool.poetry.extras]
dev = ["black", "flake8", "isort", "pre-commit", "pylint", "pytest", "pytest-xdist", "toml-sort"]
