[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0","pip>=20.0.0"]

[tool.isort]
known_first_party = ["video_comparator", "tests"]
profile = "black"

[tool.poetry]
authors = ["Côme Arvis <come.arvis@neuronest.net>", "Guillaume Ligner <guillaume.ligner@neuronest.net>"]
description = "Video comparator"
name = "video-comparator"
version = "0.1.0"

[tool.poetry.dependencies]
core = {path="../shared", develop = true}
numpy = "1.23.3"
opencv-python = "^4.8.0.74"
python = ">3.8.1,<3.10"
scikit-learn = "^1.3.0"
torch = "^2.0.1"
torchvision = "^0.15.2"
tqdm = "^4.65.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
core = { path="../shared", develop = true, extras = ["dev"] }
